@@ -1,3 +1,8 @@
+2017-07-18 Albert Chu <chu11@llnl.gov>
+
+	* libipmimonitoring/ipmi_monitoring_sensor_reading.c
+	(_store_sensor_reading): Fix several mem-leak corner cases.
+	
 2017-06-27 Ike Panhc <ike.pan@canonical.com>
 
 	* libfreeipmi/locate/ipmi-locate-dmidecode.c: Use dmi firmware in
